2005-08-17  Alex Roitman  <shura@gramps-project.org>
	* various: merge changes made in gramps20 branch with main trunk.

2005-08-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Makefile.am
	* src/plugins/Makefile.am: ScratchPad moved folder.

2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/RepositoryView.py: remove method now works again.
	
2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ScratchPad.py: fix some issues with new window management and dbstate
	* src/scratchpad.glade: moved from src/plugins
	* src/plugins/ScratchPad.py: removed
	* src/plugins/scratchpad.glade: removed

2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: fixes for lack of parent window handles 
	use of dbstate. Commented out code to bold labels for now as
	Utils.bold_label does not work. Renamed DelReposQuery.
	* src/EditSource.py: fixed repository ref edit code to use dbstate.
	* src/RepositoryRefEdit.py: fixes for dbstate and commented out window
	management code. 
	* src/RepositoryView.py: fixes for dbstate, commented out remove repos
	code for now as it does not work. Fixes edit repository call.
	
2005-08-14  Alex Roitman  <shura@gramps-project.org>
	* src/PedView.py (__init__): Define database variable.
	* src/ViewManager.py (__init__): Define empty pages list.
	* src/DisplayState.py (GrampsWindowManager,ManagedWindow): Add
	classes for window management. Still unfinished.

2005-08-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbBase.py: keep track of open files
	* src/MediaView.py: convert MediaView to handle pluggable views
	* src/PersonView.py: update filter on page change
	* src/ViewManager.py: change_database handling
	* src/gramps.glade: remove unused blocks
	* src/gramps_main.py: Add in MediaView

2005-08-12  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: set up about box and other HELP menu items
	* src/const.py.in: strings for about box