@@ -107,6 +107,7 @@ class PeopleModel(gtk.GenericTreeModel):
         self.top_visible = {}
         self.invert_result = invert_result
         self.sortnames = {}
+        self.tooltip_column = 10
         self.rebuild_data(data_filter)
     
     def rebuild_data(self,data_filter=None,skip=None):
@@ -407,6 +408,9 @@ class PeopleModel(gtk.GenericTreeModel):
         
         return u""
 
+    def column_tooltip(self,data,node):
+        return NameDisplay.displayer.sorted_name(data[_NAME_COL])
+
     def column_int_id(self,data,node):
         return node
 
@@ -435,6 +439,7 @@ COLUMN_DEFS = [
     # the order of the above columns must match PeopleView.column_names
 
     # these columns are hidden, and must always be last in the list
+    (PeopleModel.column_tooltip,    None,                      str),    
     (PeopleModel.column_sort_name,  None,                      str),
     (PeopleModel.column_int_id,     None,                      str),
     ]
